config env update

--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:tQLIpOsu,iv:cEu7a0wQ11dQzOWXcqmB4PYf7RgWvpLOSuFIcjCDLio=,tag:ikKkIa4f4L/z9scN74r4pw==,type:str]
-ansible_user: ENC[AES256_GCM,data:Ui6B7Ter,iv:CjbGmmUoL+S9PRdSAmPNRyXWPGC/mt3moTMshwZDK4k=,tag:u7IHZsrfG6nQd75dD3GEhw==,type:str]
+kind: ENC[AES256_GCM,data:xuEjTGh5,iv:fKfYa3UA0TMKFtmHtPgYdqZxJGpjod0TQGROzEaDsSY=,tag:SBQUz3begRXx1/u4XhPBVw==,type:str]
+ansible_user: ENC[AES256_GCM,data:DnDD/LYK,iv:HF2H8ibPzYlUP0cmDZINN9E+W2AC1LwkToAUTwZ9OnI=,tag:3cZBW6IpMjufrlF6uLWaIg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGQi9hVVJ6SjFVODR4VGZi
-            enNwYUdzMjZ3YzQyaTR1d1JqLytMc29EWmhZCmxMNjROREhaaHRQVk5rOUo5WlNz
-            QmdzeFkxMjBaVWJhR2NmME9VMW9YNzQKLS0tIDNTb0V5Nmx0clg1MlN1MXJhc09M
-            aWJyeGZteUk5YVdkY1ZpUFExNmtjM28KG5Mgz4obikDVZez1HYY+gsfIWb35ucE2
-            yxgL4kBoaQo2chHL+7FEGTdKU4jt6K8luGui201P/NfmiraQGwsaVA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZWdxRmhaY2J4QmJkb0lX
+            bEdBTHJoTld5b1lySmZjcHBFbG1wcWtFUWhnCmtsalJtM1ZJL0hDQU9WMXlUczVU
+            ZFkrTENHVEp3UEJzbFhPa0NtQVlKNG8KLS0tIDFLMnBuamJkMlpmc1YwN1FZR1dW
+            TCtNS1Q5d3NSZURnYllhTXVxR09mcUEKIySDhTdtDI5AHjadzWud36XuFjv3PZCh
+            k6Osy8oG1tzOlnKMSPqU5kAoqgYLcsl3kbtA2st8uVyvUMUfzsPA6w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:22Z"
-    mac: ENC[AES256_GCM,data:A/GaKcygVdJq9CWFmCe919CYrLQGEvU0HbN0o6kJFUcc+LQyHfc7+ETQBohLxoNAuio74v4jhniZU/K+PoMiv5AUTOeVrHJAEg2UDeIkjIamBHVcxQAZ8zZO0xC+9zfaMx6rkawa/Ed6OUnZUQ1xqQCrPO4RX2Z8lJG9y4IKhQ0=,iv:SDny+X0S93f4rmHJNBwSj9rMQ487USgKyx/A4tc29pM=,tag:yklSH9snK2eTLfYmjGNWYQ==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:q0ZlTtOsfGr4g9L0etqu0SFMc8zkxvwHtV0WU2nCS/pdva8VE2w3QD7Bz1zsr8rPx7vuD9QVPJ7sHqWJEdXRoMiKJpx1rQnIJCGC0OGZ9awzqciJC/DKyIWix0Z5//wbmUBLlcPTE0VYsjeqgxH4cB556OeoBuKizcOl5M9miqw=,iv:44Y51M3o4Y0w0KdYx9289r1OGzGPdOAx284rx+2LQ8c=,tag:r/+JBvXyh9rVM7kjVAU+EA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
