--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:MqjW//ht,iv:T4WfD+L01SYv4/IbUUORaXwesY9x21OXML9IDYRA7tk=,tag:4Q+O+LufUjd6Fb1K+Phj/A==,type:str]
-ansible_user: ENC[AES256_GCM,data:b02t+Jo6,iv:Hh185Y3zmH1Zv/c/eX7mIxO58rdd0pTLJcW63djmlIo=,tag:co81k8Ojpn7lcjI51TvUTQ==,type:str]
+kind: ENC[AES256_GCM,data:qmPARg3d,iv:GFf0JBe5M3LFgWdmwF7JRtwNxNn6Lx6jUDlgaNjJCs4=,tag:x2YC0jeIHP7kiSaEY5cYwQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:MekbIcTE,iv:ikYE5N/4pB8BFQ+9tZTB0bFGTQKT3rvtguNeOFIYv5Y=,tag:rCvQwmRZB+NwR4k27oYGKg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1S1hqNWpEWEVTaWczejBZ
-            WjBOdHp6OFZpL043NEh2TzBPMkRpVGJBOVFvCnVRaEE2UFpQMWtqYjZTbFBmSm1D
-            R2Y0NHkzR05xbWFsdFdZcDAwSFV0Y3MKLS0tIHNBenJ6R28yeHBnNVRycVJWd2ln
-            MzVZU3grRmpKMHJQM0t3VXRUdGE1KzAKBubAwUicn4fbRITTz+2qy9DiF1fRDotD
-            XyEMOlTGbx3Lf2Sm7Y0Kyo2hsXbserUJP0iShI+4DrLHHvcmkg4Aig==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTQVp4NkRTL0JWZzlYREZW
+            SHcySUhrWCt6UmhBK3d5U3JNRUpTaElXdVZrCnI1NTl1OGptT0JGaEdrNjZNbzc4
+            bEdhL2xwazBHRHBja0E5WlljZDBiWHcKLS0tIHRtU1N0L1lpZldWRmY2dUh0S0Vl
+            TlpHNC9lVitHaTloT1JsbGhRK0tnaTgK7OpXwEWxYx+78N2XLb6UIOs/D+Qh3ZK3
+            lfglkYTmt5wfraxDhKCiU7MLXZxsVgFWs8O1bxnl1xgvBvYPu3UEOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:22Z"
-    mac: ENC[AES256_GCM,data:TwQ6SATzpPaCcxHNbdZlzIM9Vco5ZOsKH49HX/TDO8nDKR4iwffWczfwy7cLTHSxcndtyZQINk8z+c/eTvTFzB8EF0MNiCDqb49B7PlYX5AwygYQRKZwGyarvkAwC2Cj6ZE3RhH3bZh4r/fd9AbMcza2ZWbYm24lTvXeDsbVOOE=,iv:4jVg9CrxZ08KG4tI91ut3tRQvy8L04zYIeTDz3KdZiI=,tag:vdM+AYf8c8ReTSZ0X7O32g==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:LwJLMC7QEIE5is+otwkZX1XH5rwHGZvQbTgL4cnebARt69F9hWDW+IO/ru2RXmuKThF5TUl06PwJkFhc9LWL7F8O7hWwBEJnsc/o9nAOubf4cegfmpxfqtnA3FH3d310uHVSAq8lOtrp34NJJ7OTTP6GldS0EidNh420Uz0hBSE=,iv:bIx+XrAcBKWddyEOWmHnXOi/Y4dB00QaZpGMYVc8LKk=,tag:AvA315vRnNWZRM3cua5y0A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
