--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:2twG3OQt,iv:big+CqDdUv4gDZTLY3ia0SOfcY8ksLk7h+zCvBg+Ry4=,tag:0gwFBgWPvRfk3YXTUK7UuQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:HvNQHvY+,iv:aJp5ac2tNS6Qd4cy0X6s7wckYrZBqAGwJfNNOYym1GA=,tag:YSof9u6V5R9AwRnboWvuMg==,type:str]
+kind: ENC[AES256_GCM,data:G06yazzo,iv:XvBi5UrUaEYj8+eOFnqpEM0zCO61B4HbbslJTDS0JlA=,tag:xDYCkzxXRCpyRTB2L0iXCA==,type:str]
+ansible_user: ENC[AES256_GCM,data:P5pYQ+kn,iv:5O0eprQcVGSxb934Y2ZlT5sDLvRjE7osw67tBEPzGSo=,tag:b+lV4+858ylVK/yLQuMlPg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzZ3Yzd2pzbzdMWXQxUHNl
-            TnJzcFJhYnZ6aEhHT3NReE9QaXZrWnUxSG1nCklMZUtSZlhUOTErRVFIM1lNY3p3
-            WW4rYWpsVVBsZFlhN2hkSzdyZ25jSnMKLS0tIHFobFdWTFY1MXpuY244QUpEdjQ0
-            Wkw4WWpaZVNXNGxmVnd2YlJ2bWJXcE0KxwaNIP4LEO+06/BRaQR973e6+NS8mrQC
-            +uaALjbnVGVeqLtpQPQUEubcnIM1+bgCJtk8vuLKbpxDLMMcP3qaJw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTcTY0R1NxU3NzMEpZVFRT
+            aFp0WE1CL1pycnlQY2lVTGFsMUQzdVMvaVg4CjhDZVk4TlVTZ0NpTUlLbTVuQU1a
+            dzg1WWFSeVhtSEk4RFhFNHEwRkoydXcKLS0tIGlQSGpOTHNjOHhZY1JRUGlDdTlC
+            TUxDY2doakEreGVVVWI4SVNBc1ZnL1kKNUjx51QT6VOpP4QZKz54qoMRDfD1Szhz
+            Ff8qxG0Yj1/t5bNbwzpeUvPqSHXDz2KEPiFKNTYoQc4IXIy0MC5HMw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:22Z"
-    mac: ENC[AES256_GCM,data:L46cYjg8FlD7DuAwVcuqlajeuj3qW/aSnLnmTtsQtZvawrkX6MGZtxjql0/8zP3nVz2hw9wfsEsUDSsIVm+xtXfJt2qcuKHqf8jLpNiZAnZc9yQAhsNf7RG4owEWGHgtbQDL3h+Ud724fXoUYxBEggdHT+6xp32EdizjDcm8v0I=,iv:xFNUUjoTgPSrKKOi7d7haG4a5dQf64mfvkAgbJ6fHo0=,tag:ZlTa2K+kntLDY/zLe8rd/w==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:0TtNEWlkLX7uJ1XbJJ/s/l8nC8Wu/0zC9DOt/mfwk7EgEAjKcVeDAZc6pNiMh+YdS6RALsRenfPdM6czqHCctQpUJs1ZbWCV5fC9gK4/v6U6DJOkJodZRVQ3Mu0Cr2mYg7v+EXdakOojUnXB/Dp3COeGVhUEiO8JhQbxk98t+eU=,iv:+ggCF42GFYb46YkKZDS4jCfwNKn0fY8lSwXEmv9lAqs=,tag:UGfKjoo9KT+ixIRjwzTbqg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
