--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:H0BI4BCn,iv:QpI3FL9qFYRyxMRiZx3zKlmkkxD6Q1HkF5X7E2Jiyp0=,tag:2vGutYz34I+kpsz7Ak5cYQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:ud7Hx+/h,iv:hoxDOjXY8Z/Bc7aDleXKqsu+HRIQ1g0D8n4vNHxxwn8=,tag:H9/peEPjwT0fJSIed9uDcg==,type:str]
+kind: ENC[AES256_GCM,data:aA75UQvu,iv:ZjuJHPCGX7a2+IRnWDuCB/D0spLJPurDf3JMZ8sfolA=,tag:sVirjRLCRceEFJJPXpKM7w==,type:str]
+ansible_user: ENC[AES256_GCM,data:y2h5G+WP,iv:uGRpeVILN9vrp3QpM+Qe1/vrGcbGs33/BYFXGJQZqdY=,tag:SksLtuUrPGuawlzdV1MveQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVaU9EK2VSQ3Q3Qk40bzF0
-            T0RZSkc4WVpqS1N1NElTeWdhZDJHaWU5bnhrCk1NRll2U3k4U25OWGVtYjBkQmx0
-            UjRZZ0cxc1EzRFlNOFRsWXVXUVE1dzAKLS0tIDNjQjhIRFoxTU1BMlNxTEdieGdF
-            Q05ETVZBRlVmNndWYU5mZmhLR0dIaVkK/qKm+z3WJ0NLr1Ddk+0LfYE+TjdxGadj
-            RgwbsK/MHXzDqevr/9pw/JGFphMgQYY3ZiQ8fsSKfcUPsJb7yquh8g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5QkdKKzV6dCtKTW5EOEFi
+            cHhRdFNDTm5Lby90b2hYcUIrLzcyZFVPWEQwCjJyUjFEUld3cDdVd3pMaTRTOXNp
+            a3lXeS9tVU1VVjdhL2F5VVBFTXlKWVUKLS0tIG0yUXpBaHpUdUxwbXhWbHJFM1J0
+            SHBEYi92bEdIRVdqTm5DNlQwMjljdW8Kx1Vb/poMqidr+MAxj6AgHKz/oMLr4Mxz
+            nQBw+afkPSVE5IXr5KYwthOqihtORn/8BHhRnKQl2xYECi/M8ilcFQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:22Z"
-    mac: ENC[AES256_GCM,data:r7dzXrcWQMfaaO8ozhHOijJz0VVb1Ms+AguaL2aNHi7U8Wj3N4Rp5MvWA7UZOXr0rWH9p8NKaZzf8tEIhSnOf4O4jDbIV301hH3wY2X/qDkZCuawb9eU8c7WyM2buPsdj/Lu1NDB61Q/tKJ8FgJRmGPFXI6d4RN1pZP/EWjCpQ4=,iv:fvlgsIfV7v13yW3MKstAUTr/EF8UiZoCBnPbU8DgFcY=,tag:o8zT6IAJFxwCQPCML61BQw==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:qAN14+/xvFZ2SuTHV+xTicbIQc0U+SrKKLglOXZUnRxU+o/PQJKy8SClHNO8Xrz+42V+1JWx81XBDfQ6D9HTsQFf4fBTY8O+0k6K0eRooSnnIsFl2h4aQAag8LDKUrHE7rsTIrS2awALJLZzBz5aSxVDphd8tDimMCuHcdrAfXE=,iv:KKy+H1TKveSBrLVJiT3KOEgYbTlcnAmeSoA2TOmL89w=,tag:BR9omxJR3cRsa7BOKe3jNw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
