--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:9mc3gaXkAuJuiNTwEp43MgyJqANf,iv:GUep8fZYAP57IPcgTY9wC97OV/PS2F5x7J4jhQE+dYw=,tag:5nIc7BUDjKDmaMiyFOdiRQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:fLJZ0WT/o4o0uigVI8kOZvjc6kT1dQJbTZzh9oIYokLA0VaFSQ==,iv:N36rxe5yKLUwwp8GYd5tyn50Hq2p6Tr0igmjTi36k1g=,tag:bvfOxaVApPnsjE16lKchXg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Y7eYlb7mt69LrkM=,iv:Tv96D/7FJB3+mfAxK+mErBoXG7kcyQ+mCEJc9CNPdPQ=,tag:kBzAyDC9h3FBAgyeMmbEag==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:odZvVQ401K09YuCPBQ/DAO/sschW,iv:KiMTgRVSGd3fWJSc6s7KKBihn73ExtB9Q3lr1XkGR8Y=,tag:Y5MCWEMGhceyhEOgMuguCQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:75oTQHGl/1A/UZ97tGOFPYSUe8DkOm+n9e+ptiuUN42V3NZAlA==,iv:X1VzaCRj4zNRONAxcjqQ/vRjt59cPECsQpaCOvYZIXo=,tag:3q8AUistn3cWW/+c0a+Wag==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:mJPIXFv7Yxvhjc0=,iv:sQ1Nr7JB8LymUJGU5dz9h/yuwoj7p8FXlVLOQOakNks=,tag:30VAUg1FN63XZCsBa+MC5g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1VHE2V01DdGN3VnowdkNv
-            aTZxYTY3SmpPTzlDdnhQQm9hUnJnUitWUkJVCjc2NGJVYjlURDYxZGRGTStpQTJN
-            TzdmV1lYTXhNYzNCMWk3ckpLQUxPYWsKLS0tIERMeW01TXZ4Z1lob0M2djdIdkQ0
-            SlJvRUZMZFJzTHUwZ0ZiUzE0SXZ6bFEKdcLZHU+Jt3v8Ov4m3/9R7gtkcwfrEaJo
-            vcgvUWLNzp/uob4Dqk2kk7dGp2lMZN1C4BWa6+fjxXBgNkDmyjtCLA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkajlDalZSd1RlcmIyNG9U
+            RWxncFNYRGN3MURkZnI3S3RqK1lNd1R3bjNnCmdwdGIyRURYOSt3YmZlY0J2VnNn
+            UmE0b1Y2U01TTkMwbkMxMXUwVUdZOFEKLS0tIERob3lkbi9RQXl2RUxTb2pkdC9q
+            dzFUekhCcURSYUg1TDhaUlhDczJMNFEK0gfh/b57FaqtiisI13v4O+qNstxqEomU
+            4dV1gD8bEpwIjveFZ7YUCog/bcH9xzv7OfJ1wM1Ol68Duh+vt0SLdQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:21Z"
-    mac: ENC[AES256_GCM,data:WKc4YCpAMOLLi8cpNIR9i6F94H43PlqL6u1hqFCuUbhlvTzujBih6FuFGDyTAkdNqUqckqrjRyNV23xtcDijoGUlR3cvoSUmjS9vV97FN75NcVyOexycFCOaUvINmXu6WOwjDYS4dpreKf5YEmcwybA8hZFEywiqjQOdeWAx0nw=,iv:fhSncF5oIANoDbuFMg+8JrWZzcKiXb0u/5PmwYEGrrY=,tag:YnivXCCmKyF67G9YoNbczQ==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:po4Ow88FLYCsZV4lyCjr0DMinqJO8rjuTnrKM8pZqfA8BYxbriHUBm+bCrPYnEEx9D7pgWHTlNDkzRpA570Ahhh//FnPFyfx10gOWwfCLCoqux+9zUFkmrlqMHZSVPamR6w+FsGVROdEx/ZJHX2nab3G/ZIA/Fchfxgrds6mePw=,iv:CR9gPGr0QbXjiQZCVk6NjSQrbORZyt+Xd50Boq7S5zY=,tag:BA9UgFt2kv0KBra9xYqFRA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
