--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:A5rOdGNFwetTGUM=,iv:FywOgYWpZpPNfYPZIK0Q/YR3BgDeXWKAG4jZFjQaUxI=,tag:KAqyT+P/ty0WkSvZMpYwjw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:sEiZKQk71+2fYgbWgE8TpjCtuDQG,iv:Mze8vB+6XOkGngkS8xHMBz8JIQqo1aH521foQSB/WUI=,tag:DtGF2BYCKA/DLUmN98zXlA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:1bZ8oKe6nqm5yg1mcxtTwYRgNI+D8/ilg6iROndIOJ366tCYcQCMC7n710N1Mh8KyuaJ6ESdCVEVUYysJ27+eWUjsgl3+GY=,iv:xNEvLtOpEiR3U/CmzpwVR3n3ik14UWkNN4LnOiDFNoY=,tag:k7gCBYGZZHB2pn8HnnS9FA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:mz1rbA0i3ytG/9hgiUaaaFGoOmls2y4YoPm9+fwAiySD3BY=,iv:u+nwPVqTuv8eC+MFmGPW15pPj7iF52LslIGxomyZwtc=,tag:/zgmWQ/7JqGbqmlINTvyzw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:PteFwtAfcJ9PEzAzBeugJK1e5g==,iv:SVkZZiDV+TA+Xs/2Rb0Z+Gn1zkQqYCkA028j3IERHjY=,tag:JjKDHJZ398Uqj/cbkIOpLA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:0nAJ5SgkGfqMueS/gENzWJZiAizJ,iv:oFIiCjVQGU+FYQ2IfdHF8zZ7XdriW2QUu8COCWn+jbs=,tag:/OPQUsz8+UpuoOTf4d3CfQ==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:zh3L528h7VY=,iv:RLTBEtwmp6+WYQcm/YVGxX8qmtUSacGCpCgEbBJpx6o=,tag:fuC3MB+xLUV2S3isp2Te2w==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:nUT6x9SbfbA=,iv:c2LZYYqL4DMiFAdUsSN6NSwliV9XZMBF3jgG5ebVveQ=,tag:cC2+WDdmOuVbwWZUcLNK2g==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:4fseUndBHmA1LDoD4FgxEHAirGcNkjDyQQVHWSb6D0z3oY2FjKYlhjkF+7pJMIy8vP1OCo3MZvNCXNor8UT4ww==,iv:ud/uRTJkBPjQTuF9taFkVhAGmFlOWfHmpDz5zzkXOe4=,tag:ixGosMaUR4HdsOWJ4nDegQ==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:bQlr4J/DIx2rg15g+uNlwMiZ1iFBM7wxkuL+7J6NkyRZn22gc5Ljipx4xIfVuhaB35BPoGHuvzeCCWUmwLRT1A==,iv:CJD4nn4SkugULdzXCK852fcLX/BhQ58clQych4iFb0E=,tag:BTXPowSpbNTHDQQDm5Mxig==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:mMf0xlR7ZhEX,iv:6H1R+NACTFdN0b5qNTdS78hAgJ0oCiaPH2kkWWGZcr4=,tag:bfUALAcYgZsgFbAAU7QgVQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:R+txPGnoKGYu/AabBoBr,iv:hXyVnhUrFRVgpIFQYAe9y/mkWn5JaTQjhYJ+/B8Rk6M=,tag:WeTFEgu0u6zKQ9+GiVDUYg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:Ba5ezgU24tIW5QW84W32EbfZpUAX0RpCUUGgvYmUscRHh0Bw0i6ONFL0OA+ZByhZPWE=,iv:GrVE9FeuYVcW0jnAUPWsv9iqBynMdBRoFAGbZshlThg=,tag:AjqRAxrtftl8TVWZ8Vjusw==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:OSFCxwndutQ+YC1pmhk=,iv:n4JW6LPrWz3sBAPuG5xeB9FIVKLqVYKQzf3NH4CNMSM=,tag:bj75btjEb8TufN8P4WdIlQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:aV0RZhEzvgwAxRGdwulAbH9SsPY=,iv:JJNPQs/PWa+GGyfydzQAvM+dCpebrWRMZtVTjSrzJX0=,tag:IYj/OH4zEzlPgcqFiSTMcA==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:fATI9JEah30=,iv:bgy/FGxDTTBzmt6fsC7/ow/c4KmcDvyPPJ+z7sFNQYU=,tag:kH+egnmjynNYxdCLIQIXUw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:8Gp0aO/tYZGQQz3A,iv:BTeb9aUtLo073E24caxDcYfvkm8JbgZPQ3E2vibAoeM=,tag:BqHstynCcp9nCrFx32QRpg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:kmqYOxY46dT4,iv:orZ/DoUJopwRsAD44Lc8XKN2L5k1oeX0EvGAyEUFPCc=,tag:w18ue/P2gutoPObFzUGaPQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:MRxdK1NnvyMK,iv:0p+ApRMjqyiWp5vc1AYjZxe3tc1XkGaJvEDtR1qsNaU=,tag:4oTdzJwDHp645P7vd0bQpw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:U8Xewpa5tZixPQA=,iv:iJ80aKJ2Lc0cMekPx3WBsq4U1gaZsBXVYFzBLqzQz1k=,tag:n9N89NqMl9N8hBqDj0Lu2w==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yZb83Wewr15ol6vTpfBuQLj1TLV+,iv:nA58oKyXQ+3J0f+6EdApIc00JH1s4mchgBe+Ke9EuWA=,tag:1h8h+8LN+/iiy2VtMX/12Q==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:Yujci116jK1rejJcJ9G3qUvfmuZZyEulR25MpNRU2WM/Gk12PrMmAmquXo9q/6/QuJP3U+u0yztMpVZWVWhybv6pOIkrFmE=,iv:3H4dDWyLS/YG/YDt9X9NplhZRwlODwnCHi9kdODNba4=,tag:XptumPBI+ey+m/0kHuLYxA==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:hHDAy89rE6uiUlfx1bNf95sz6OkzFmJ26dgpIjIhuPXsWJ0=,iv:QKJAtH5ZIzkVrqX3zuYh0Aijgp7q3Zcly+e+NlGQF0k=,tag:oKBzxNsrGsFiuxnsumbLZw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:XnxTT85wyaSc14N7IMuT60trVw==,iv:vX0ODsnLiMWCAGbFSpXwg/FRm4rZR4hRJirHWo1mIQo=,tag:kuzkkT/+zqVNQbiVIxGuvg==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:FFfmaqDQNQwSuDC5KAjb4obET1uP,iv:j42V21TVZbNMl0lE6qgF0wj79KpWtYyAWqMQQC+kfc4=,tag:AYceQAlxyvS1iJTYWsgJvQ==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:IGtoGe90Uvs=,iv:zFa//vHJmJZTMXOlI5bJi+9SFDDHjb+VO0zpv9c3Cx8=,tag:55Gip5mWdn1YTb3fp/khWQ==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:snfwoY64Lcg=,iv:JvDSCrKYVgS14yVQIiK4KmNupgbxK1l0xvq2vURk9AU=,tag:qqgOyjsofZ2b7XsJ894z7w==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:Eowqbgiz/EKN4YFKmpbPvNopBNdaEAeQel4EZSriRxZ2xDVca/XH23mwntL6oL3HQpaEqjQ7qd6WjbS1CC98Hg==,iv:HAw4qRe/c0W4mjxr5EBIrSV1eYEIXJAm2XJKzb0AGZY=,tag:fGDPZ5ICvkwOmsriqXh33A==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:S61h1TYmnzQ9pQVDRHP6NfcO2YHyT//LQ9zsrApcWBJ1UMnM9yL4xn76c2+qdffBINvS+90d29EKjt89XrL4FA==,iv:WW1jswEROOsRNzIW9pkfVxneIibG2xsIpF6P/wsw1z0=,tag:XsVUZemruJ+w7JqC+hdHkQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:kpFXBAtk4UCM,iv:SVoa3Qmw9sXpc1kGrBcP0Tz25986GjQTsLSmgs9DjAQ=,tag:QazRLQcx8kjj9+yg8f8PJA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:W7KLtcGPSs/0XHEEyj7A,iv:L9u83dnLRqSXAaOunLOpB2QUFyrUb1LC3x4xKJ2DHRU=,tag:Z2UXKfrgOyDgwCt+dcBErg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:XiO8YmAT02/pedSpFoC0Qf5zW30JoCnjpM7He+pbhA0U5csvChFWF49YCrJXuE8R1BA=,iv:UkzVGCXik7zdzv7rvlf5gVbUbkNWzuG8Lvk7ta5d2HU=,tag:KSHuqccrnJco1i6Rb+pzdg==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:sSS1QZClV2iBkpigAn0=,iv:xEIeG/qS8XoUlWRlobskbfrVw8nY/YdLxZCXz/JZxfE=,tag:nY4NutssvCXUAqvsJI6e3w==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:UFAGOGDDuhA02RLItfkZTY0uDPU=,iv:sNy7WN6v9a5sJCgZGbkZchV+0oCQsSHmJLIz1q7NHvM=,tag:b9S6NJXG/bujp11rJY7FOg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:7V3DUfCKvAc=,iv:YuVhr8ICtwUNF27+8Q6V2Tb3Hbarh/BKWkokciEkXQk=,tag:97OjlVTjsb72tWqBuDiC9A==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:z6mmGWVAQa0y0kqw,iv:Qzmsph/sUYxBpSgXXZX8cF7uVtUW9N6y2/gOJi8ZKN8=,tag:LA72OJxsjncOEQoDldfq7Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:4z5wlZHLqttu,iv:2LvNC7zbzQqUYnaiu5uIG1UAmQ2UM6Pgv8XcSOuS2Fo=,tag:yCNAwZN8nxmp56v+Objy6Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:/ceOLKk5yx6P,iv:mQcuK+Z8RQ5zARE3ALtvMIvRCNgWtljmBCRLenU/MO8=,tag:vutsdk+UcvXX5q4b6vC8og==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5L3dQUGhEeE04ZFU1amVW
-            azErZHZtQkFBNGlWZjcyTVZITnNDSmJ3clVrCnUvc1dSMFV1b0lzOE9tT1ptK29D
-            STk1blZHUXJWcXA1NmpUMkhxWk8xVW8KLS0tIC9sZ2ExYWhPczU4K0RoY3pWWjJD
-            MVlWV2g1SEhJR1Iyb0tVNkZac1pqcXMKUF3Fv9YaeMTd7pLNjtP1zed8xGKlBqH2
-            MGfSy5jltxmi74utLMSuWAzfCi+ojEQ2CaRRy9fwW3MdIqSrNl/I9g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1ejdranFXOXRqYlFZdXZZ
+            Y2EvaWNtNW9Ld0VoYXViblUyMVNCb2Q5ZHlRCnJxZ1lxMVB6a0d0aWRVdzNpL0l0
+            K1RlUUM4aFhpc1ZMQmFlSUxZK1I2M1EKLS0tIENnVFlmazJLUTZ5dTQrWUdQVHpJ
+            RzBkcGxVVk9SQkRCZ09EeWhvOGNkNTAKjQBR4PLuCkQ1M8Mpd+Lut3w2LwHzojb0
+            AtYEplObXzywTyJ1TmiDi4tN5RwosnEd/sEfGOnbI3VnuqLQMQMkpQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:21Z"
-    mac: ENC[AES256_GCM,data:4U/ryzalR8kKDvEVuO54z73Do2fvwOlN2JOX0lRED0taEox4cBwNzc1EPpbxIKcRtsJs6+W65SxZPcAqi0wkAwAzVIPIlOP4WN09JiC5WzuE2AcjcYRl/dH6s0wBrDDR2hfKLKgbDWqUbxKhBx6pU8qxVueWCv+EMTXRiAPKFPg=,iv:0O+ZK8DJOlR7Td35S7Jstr5c84L0NdwL5Bxf2cqs+Ro=,tag:H3DCqfJgh9Zk01t3HZ5MUA==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:QklSEPYQ1ll4iIPBtWV+fAjGS9u88+ylaZBSeH+yY2oopvsTApodgRqhepe5/amqgmlRXywebY880J+tAhQg5sF8Z/Z8RIuxCmNtAqTS54GF6yjHfOBAiE/TB6u0OVaj8ZGjAGJgoxSnGLRO+9Nd867x4xv0P7vIKFqQAIb+YEI=,iv:yLgLi2tybHEjdca0dqpav+BSoQv3JWGVmqHBXejx4YQ=,tag:E8NNAAM+p+NPcX8xOIlhXw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
