--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -16,3 +16,4 @@ data:
   NFS_SERVER_PATH: "${BOOTSTRAP_NFS_SERVER_PATH}"
   PROXMOX_ADDR: "${BOOTSTRAP_PROXMOX_ADDR}"
   PLEX_ADDR: "${BOOTSTRAP_PLEX_ADDR}"
+  SVC_PLEX_ADDR: "${BOOTSTRAP_SVC_PLEX_ADDR}"
