--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EusZFZFp,iv:rJ3jpy0iXj4DmFll9MMjetCdkjNrPnr+rAH1x1mjQts=,tag:Uf03BRH9YDF8HZQLAmtovg==,type:str]
-ansible_user: ENC[AES256_GCM,data:hxa9O+94,iv:R2G1iTBJ4mv1S6zGlz6hFv0AYKI00JDAFM47B9jvy0Y=,tag:ekoR4ZuUqRx0EW75TXfrlw==,type:str]
+kind: ENC[AES256_GCM,data:9paT0NTI,iv:yIoH3KIIRQseOXtfbQUw75YsNLC3iOWztDogd0PEDdc=,tag:WBHZToah/bBn5QSIpCsBFA==,type:str]
+ansible_user: ENC[AES256_GCM,data:GNmxR8y3,iv:BTb46YjyA7Nj8f/hEiftl5oBqRdQpBTTGi2KXnG7pyc=,tag:41MtgF3GFxanTj/QIYuw6w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwMXh1dTYramVqTTdJdWVx
-            MDA0RFRETC9DYzhkR0J1SFZrYnd3SWNjblNjCmxVbzErbGVnSktySW5hQS9FcmZM
-            dFVLSFpvQjY4MDl4Ly8xMjI1MnU0SEUKLS0tIGdnaG9GNW9jL3dSbStBOWJ2TDNV
-            S3p6RjR3KzJIY2tsTms3NFV0cER3WEkK+61x0PwvVrq14yx8wDVQYgsKhBh/ZjeS
-            EghnBqPYGcoOjHcU2N4OyXmBEE//Qq4nJrjGgGu78cKTLXBojuvqLw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwS1ZEay9Zd3h5blkvUG40
+            cnBZVE1qT2U4cDBhUVg2aU5SQVhjWk1oZ0RNCmZia1p0aHBJblRGMWo2Um1IQzJN
+            ZGtrNzNyclRzQ3duZWZTeG5hc0FRQ0UKLS0tICtHTXhVYU0rY09tSHU0WWF0Wmh2
+            bG93NUcvNWsxTHZyV0VXMWxxN2cvWTQK4/lM0uxVh1Mx5VhKnRr4IjIOd9OehqVv
+            7gY1mFmoCRPy4QSMtp4LOv1Qbl4ob9Lq8a7Ak+AL0DxiDPX6+OaQWQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T23:33:22Z"
-    mac: ENC[AES256_GCM,data:fRfT8ApdKs7xcRyfM+s4vqcZHrHjA4PGNR9sSN5V/Zkb5kQAiGMYslLooeqNN0mtkdjIWJyNbMR+brpXjWzItGVq2pXFZJ44XFMPCuj5/QnhrM7CV1oh6abj23n9LD0ny2o2BQtty7QxJvPCeF/Dv7NQrdYq4rKcwyjk1Iyb47s=,iv:DvODw7uW4lWs2T1MTwmALikm9xKOvXXcZf4voxfoD+M=,tag:wq9GDUAbcORAYST/1PY9vA==,type:str]
+    lastmodified: "2023-01-12T03:56:27Z"
+    mac: ENC[AES256_GCM,data:U6wb4Ba8AZ0eszdw4Pv06PjRLtEGN9XNoAgoT4GdPZcug3KBUmRq3eovI0+jHtp3Bkunr289rBQUTzl7HspgOgtQ46H4LwFNaVT8VkRXwDvQTIOPdg4VHv1Xt5OAfNizDpv/x4YsLHeq5QwZqn0SbrnI1K7E948SyPzjhjpOPYE=,iv:Hr9CGRdZCAwWY0pA0PmB3r4F414og281paPLa6QMWJo=,tag:p0poDHNIzTM6rXCNZEVRIA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
