--- a/kubernetes/apps/default/plex/ks.yaml
+++ b/kubernetes/apps/default/plex/ks.yaml
@@ -2,25 +2,30 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-loki
+  name: cluster-apps-plex
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
   dependsOn:
     - name: cluster-apps-external-secrets-stores
-    - name: cluster-apps-minio
     - name: cluster-apps-rook-ceph-cluster
-  path: ./kubernetes/apps/monitoring/loki/app
+    - name: cluster-apps-volsync
+    - name: cluster-apps-intel-device-plugin-gpu
+  path: ./kubernetes/apps/default/plex/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   healthChecks:
+    - apiVersion: batch/v1
+      kind: CronJob
+      name: plex-off-deck
+      namespace: default
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: loki
-      namespace: monitoring
+      name: plex
+      namespace: default
   interval: 30m
   retryInterval: 1m
-  timeout: 5m
+  timeout: 3m
