--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -4,7 +4,9 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./kube-vip/ks.yaml
+  - ./intel-device-plugin
   - ./metrics-server/ks.yaml
+  - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
   #- ./csi-driver-nfs/ks.yaml
   - ./nfs-subdir-external-provisioner/ks.yaml
