--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./authelia.yaml
   - ./authentik.yaml
-  - ./csi-driver-nfs.yaml
+  # - ./csi-driver-nfs.yaml
   - ./bitnami.yaml
   - ./bjw-s.yaml
   - ./external-dns.yaml
