--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -4,10 +4,9 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./kube-vip/ks.yaml
-  - ./intel-device-plugin/ks.yaml
+  #- ./intel-device-plugin/ks.yaml
   - ./metrics-server/ks.yaml
-  - ./node-feature-discovery/ks.yaml
+  #- ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
-  #- ./csi-driver-nfs/ks.yaml
   - ./nfs-subdir-external-provisioner/ks.yaml
   - ./storage/ks.yaml
